--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,21 @@
 	},
 	"dependencies": {
 		"@nestjs/common": "^8.0.0",
+		"@nestjs/config": "^2.1.0",
 		"@nestjs/core": "^8.0.0",
+		"@nestjs/jwt": "^8.0.1",
+		"@nestjs/mapped-types": "*",
+		"@nestjs/passport": "^8.2.2",
 		"@nestjs/platform-express": "^8.0.0",
+		"@typegoose/typegoose": "^9.9.0",
+		"app-root-path": "^3.0.0",
+		"bcryptjs": "^2.4.3",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.13.2",
+		"mongoose": "^6.4.0",
+		"nestjs-typegoose": "^7.1.38",
+		"passport": "^0.6.0",
+		"passport-jwt": "^4.0.0",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"rxjs": "^7.2.0"
@@ -32,9 +45,13 @@
 		"@nestjs/cli": "^8.0.0",
 		"@nestjs/schematics": "^8.0.0",
 		"@nestjs/testing": "^8.0.0",
+		"@types/app-root-path": "^1.2.4",
+		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.13",
 		"@types/jest": "27.5.0",
+		"@types/mongoose": "^5.11.97",
 		"@types/node": "^16.0.0",
+		"@types/passport-jwt": "^3.0.6",
 		"@types/supertest": "^2.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.0.0",
 		"@typescript-eslint/parser": "^5.0.0",
