--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.0",
+    "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "sass": "^1.53.0"
   },
