--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"axios": "^0.27.2",
 		"classnames": "^2.3.1",
+		"js-cookie": "^3.0.1",
 		"next": "12.1.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -21,6 +22,7 @@
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
+		"@types/js-cookie": "^3.0.2",
 		"@types/node": "18.0.0",
 		"@types/react": "18.0.14",
 		"@types/react-dom": "18.0.5",
