--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
 		"react-hook-form": "^7.33.0",
 		"react-icons": "^4.4.0",
 		"react-query": "^3.39.1",
-		"sass": "^1.53.0"
+		"sass": "^1.53.0",
+		"swiper": "^8.2.6"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
