--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
 		"bcryptjs": "^2.4.3",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
+		"class-validator-mongo-object-id": "^1.3.0",
 		"mongoose": "^6.4.0",
 		"nestjs-typegoose": "^7.1.38",
 		"passport": "^0.6.0",
