--- a/server/package.json
+++ b/server/package.json
@@ -28,12 +28,14 @@
 		"@nestjs/mapped-types": "*",
 		"@nestjs/passport": "^8.2.2",
 		"@nestjs/platform-express": "^8.0.0",
+		"@nestjs/serve-static": "^3.0.0",
 		"@typegoose/typegoose": "^9.9.0",
 		"app-root-path": "^3.0.0",
 		"bcryptjs": "^2.4.3",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
 		"class-validator-mongo-object-id": "^1.3.0",
+		"fs-extra": "^10.1.0",
 		"mongoose": "^6.4.0",
 		"nestjs-typegoose": "^7.1.38",
 		"passport": "^0.6.0",
@@ -49,8 +51,10 @@
 		"@types/app-root-path": "^1.2.4",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.13",
+		"@types/fs-extra": "^9.0.13",
 		"@types/jest": "27.5.0",
 		"@types/mongoose": "^5.11.97",
+		"@types/multer": "^1.4.7",
 		"@types/node": "^16.0.0",
 		"@types/passport-jwt": "^3.0.6",
 		"@types/supertest": "^2.0.11",
