--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
 		"axios": "^0.27.2",
 		"classnames": "^2.3.1",
 		"js-cookie": "^3.0.1",
+		"lodash": "^4.17.21",
 		"next": "12.1.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.33.0",
 		"react-icons": "^4.4.0",
+		"react-loading-skeleton": "^3.1.0",
 		"react-query": "^3.39.1",
 		"sass": "^1.53.0",
 		"swiper": "^8.2.6"
@@ -24,6 +26,7 @@
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
 		"@types/js-cookie": "^3.0.2",
+		"@types/lodash": "^4.14.182",
 		"@types/node": "18.0.0",
 		"@types/react": "18.0.14",
 		"@types/react-dom": "18.0.5",
