--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -14,6 +14,7 @@
 		"^@/providers/(.*)$",
 		"^@/services/(.*)$",
 		"^@/assets/(.*)$",
+		"^@/types/(.*)$",
 		"^@/hooks/(.*)$",
 		"^../(.*)",
 		"^./(.*)",
