--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"axios": "^0.27.2",
 		"classnames": "^2.3.1",
+		"dayjs": "^1.11.3",
 		"js-cookie": "^3.0.1",
 		"lodash": "^4.17.21",
 		"next": "12.1.6",
